result_table/viap_list/min-4-n-u.c/output_min-4-n-u.c.log
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c: In function ‘main’:
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:74:7: error: size of array ‘_1_PROVE’ is too large
   int _1_PROVE[1000000][1000000][1000000][1000000];
       ^
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:139:45: warning: comparison between pointer and integer
           _1_PROVE[i][k][j][l] = A[i][j][k] >= min;
                                             ^
/home/pritom/mainDev/VIAP_ARRAY-master/viap/input_program.c:141:18: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Wformat=]
           printf("A[i][j][k]:%d\n", A[i][j][k]);
                  ^
Program Body
{
  int _1_PROVE[1000000][1000000][1000000][1000000];
  int i;
  int j;
  int k;
  int l;
  int m;
  int n;
  int p;
  int q;
  int A[m][n][p][q];
  int min;
  i = 0;
  j = 0;
  k = 0;
  l = 0;
  min = A[0][0][0][0];
  while (i < m)
  {
    j = 0;
    k = 0;
    l = 0;
    while (j < n)
    {
      k = 0;
      l = 0;
      while (k < p)
      {
        l = 0;
        while (l < q)
        {
          if (A[i][j][k][l] < min)
          {
            min = A[i][j][k][l];
          }

          l = l + 1;
        }

        k = k + 1;
      }

      j = j + 1;
    }

    i = i + 1;
  }

  i = 0;
  j = 0;
  k = 0;
  l = 0;
  while (i < m)
  {
    j = 0;
    k = 0;
    l = 0;
    while (j < n)
    {
      k = 0;
      l = 0;
      while (k < p)
      {
        l = 0;
        while (l < q)
        {
          _1_PROVE[i][k][j][l] = A[i][j][k] >= min;
          l = l + 1;
        }

        k = k + 1;
      }

      j = j + 1;
    }

    i = i + 1;
  }

}

Function Name:
main
Return Type:
int
Input Variables:
{}
Local Variables:
{ A:array j:int min:int i:int k:int _1_PROVE:array m:int l:int n:int q:int p:int}


Output in normal notation:
1. Frame axioms:
A1 = A
q1 = q
n1 = n
m1 = m
p1 = p

2. Output equations:
min1 = min15(_N4)
i1 = (_N8+0)
k1 = k29(_N8)
j1 = j29(_N8)
l1 = l29(_N8)
d4array1(_x1,_x2,_x3,_x4,_x5) = d4array29(_x1,_x2,_x3,_x4,_x5,_N8)

3. Other axioms:
min3((_n1+1),_n2,_n3,_n4) = ite((d4array(A,(_n4+0),(_n3+0),(_n2+0),(_n1+0))<min3(_n1,_n2,_n3,_n4)),d4array(A,(_n4+0),(_n3+0),(_n2+0),(_n1+0)),min3(_n1,_n2,_n3,_n4))
min3(0,_n2,_n3,_n4) = min6(_n2,_n3,_n4)
(_N1(_n2,_n3,_n4)>=(-(0)+q))
(_n1<_N1(_n2,_n3,_n4)) -> ((_n1+0)<q)
l6((_n2+1),_n3,_n4) = (_N1(_n2,_n3,_n4)+0)
min6((_n2+1),_n3,_n4) = min3(_N1(_n2,_n3,_n4),_n2,_n3,_n4)
l6(0,_n3,_n4) = 0
min6(0,_n3,_n4) = min10(_n3,_n4)
(_N2(_n3,_n4)>=(-(0)+p))
(_n2<_N2(_n3,_n4)) -> ((_n2+0)<p)
k10((_n3+1),_n4) = (_N2(_n3,_n4)+0)
l10((_n3+1),_n4) = l6(_N2(_n3,_n4),_n3,_n4)
min10((_n3+1),_n4) = min6(_N2(_n3,_n4),_n3,_n4)
k10(0,_n4) = 0
l10(0,_n4) = 0
min10(0,_n4) = min15(_n4)
(_N3(_n4)>=(-(0)+n))
(_n3<_N3(_n4)) -> ((_n3+0)<n)
k15((_n4+1)) = k10(_N3(_n4),_n4)
j15((_n4+1)) = (_N3(_n4)+0)
l15((_n4+1)) = l10(_N3(_n4),_n4)
min15((_n4+1)) = min10(_N3(_n4),_n4)
k15(0) = 0
j15(0) = 0
l15(0) = 0
min15(0) = d4array(A,0,0,0,0)
(_N4>=(-(0)+m))
(_n4<_N4) -> ((_n4+0)<m)
d4array17(_x1,_x2,_x3,_x4,_x5,(_n5+1),_n6,_n7,_n8) = d4array17(_x1,_x2,_x3,_x4,_x5,_n5,_n6,_n7,_n8)
d4array17(_x1,_x2,_x3,_x4,_x5,0,_n6,_n7,_n8) = d4array20(_x1,_x2,_x3,_x4,_x5,_n6,_n7,_n8)
(_N5(_n6,_n7,_n8)>=(-(0)+q))
(_n5<_N5(_n6,_n7,_n8)) -> ((_n5+0)<q)
d4array20(_x1,_x2,_x3,_x4,_x5,(_n6+1),_n7,_n8) = d4array17(_x1,_x2,_x3,_x4,_x5,_N5(_n6,_n7,_n8),_n6,_n7,_n8)
l20((_n6+1),_n7,_n8) = (_N5(_n6,_n7,_n8)+0)
d4array20(_x1,_x2,_x3,_x4,_x5,0,_n7,_n8) = d4array24(_x1,_x2,_x3,_x4,_x5,_n7,_n8)
l20(0,_n7,_n8) = 0
(_N6(_n7,_n8)>=(-(0)+p))
(_n6<_N6(_n7,_n8)) -> ((_n6+0)<p)
d4array24(_x1,_x2,_x3,_x4,_x5,(_n7+1),_n8) = d4array20(_x1,_x2,_x3,_x4,_x5,_N6(_n7,_n8),_n7,_n8)
k24((_n7+1),_n8) = (_N6(_n7,_n8)+0)
l24((_n7+1),_n8) = l20(_N6(_n7,_n8),_n7,_n8)
d4array24(_x1,_x2,_x3,_x4,_x5,0,_n8) = d4array29(_x1,_x2,_x3,_x4,_x5,_n8)
k24(0,_n8) = 0
l24(0,_n8) = 0
(_N7(_n8)>=(-(0)+n))
(_n7<_N7(_n8)) -> ((_n7+0)<n)
d4array29(_x1,_x2,_x3,_x4,_x5,(_n8+1)) = d4array24(_x1,_x2,_x3,_x4,_x5,_N7(_n8),_n8)
k29((_n8+1)) = k24(_N7(_n8),_n8)
j29((_n8+1)) = (_N7(_n8)+0)
l29((_n8+1)) = l24(_N7(_n8),_n8)
d4array29(_x1,_x2,_x3,_x4,_x5,0) = d4array(_x1,_x2,_x3,_x4,_x5)
k29(0) = 0
j29(0) = 0
l29(0) = 0
(_N8>=(-(0)+m))
(_n8<_N8) -> ((_n8+0)<m)

4. Assumption :

5. Assertion :
(d3array(A,(_n8+0),(_n7+0),(_n6+0))>=min15(_N4))

Axiomes Added

d4array24(A,_x2,_x3,_x4,_x5,_N7(_n8),_n8) = d4array24(A,_x2,_x3,_x4,_x5,(_n7+1),_n8)
d4array29(A,_x2,_x3,_x4,_x5,_N8) = d4array29(A,_x2,_x3,_x4,_x5,(_n8+1))
d4array17(A,_x2,_x3,_x4,_x5,_N5(_n6,_n7,_n8),_n6,_n7,_n8) = d4array17(A,_x2,_x3,_x4,_x5,_N5(_n6,_n7,_n8),_n6,_n7,_n8)
d4array20(A,_x2,_x3,_x4,_x5,_N6(_n7,_n8),_n7,_n8) = d4array(A,_x2,_x3,_x4,_x5)
d4array20(A,_x2,_x3,_x4,_x5,_N6(_n7,_n8),_n7,_n8) = d4array20(A,_x2,_x3,_x4,_x5,(_n6+1),_n7,_n8)
d4array24(A,_x2,_x3,_x4,_x5,_N7(_n8),_n8) = d4array(A,_x2,_x3,_x4,_x5)
d4array29(A,_x2,_x3,_x4,_x5,_N8) = d4array(A,_x2,_x3,_x4,_x5)
d4array17(A,_x2,_x3,_x4,_x5,_N5(_n6,_n7,_n8),_n6,_n7,_n8) = d4array(A,_x2,_x3,_x4,_x5)
min3((_n1+1),_n2,_n3,_n4) = ite((d4array(A,(_n4+0),(_n3+0),(_n2+0),(_n1+0))<min3(_n1,_n2,_n3,_n4)),d4array(A,(_n4+0),(_n3+0),(_n2+0),(_n1+0)),min3(_n1,_n2,_n3,_n4))
min3(0,_n2,_n3,_n4) = min6(_n2,_n3,_n4)
(_N1(_n2,_n3,_n4)>=(-(0)+q))
(_n1<_N1(_n2,_n3,_n4)) -> ((_n1+0)<q)
l6((_n2+1),_n3,_n4) = (_N1(_n2,_n3,_n4)+0)
min6((_n2+1),_n3,_n4) = min3(_N1(_n2,_n3,_n4),_n2,_n3,_n4)
l6(0,_n3,_n4) = 0
min6(0,_n3,_n4) = min10(_n3,_n4)
(_N2(_n3,_n4)>=(-(0)+p))
(_n2<_N2(_n3,_n4)) -> ((_n2+0)<p)
k10((_n3+1),_n4) = (_N2(_n3,_n4)+0)
l10((_n3+1),_n4) = l6(_N2(_n3,_n4),_n3,_n4)
min10((_n3+1),_n4) = min6(_N2(_n3,_n4),_n3,_n4)
k10(0,_n4) = 0
l10(0,_n4) = 0
min10(0,_n4) = min15(_n4)
(_N3(_n4)>=(-(0)+n))
(_n3<_N3(_n4)) -> ((_n3+0)<n)
k15((_n4+1)) = k10(_N3(_n4),_n4)
j15((_n4+1)) = (_N3(_n4)+0)
l15((_n4+1)) = l10(_N3(_n4),_n4)
min15((_n4+1)) = min10(_N3(_n4),_n4)
k15(0) = 0
j15(0) = 0
l15(0) = 0
min15(0) = d4array(A,0,0,0,0)
(_N4>=(-(0)+m))
(_n4<_N4) -> ((_n4+0)<m)
(_N5(_n6,_n7,_n8)>=(-(0)+q))
(_n5<_N5(_n6,_n7,_n8)) -> ((_n5+0)<q)
d4array20(A,_x2,_x3,_x4,_x5,(_n6+1),_n7,_n8) = d4array20(A,_x2,_x3,_x4,_x5,_N5(_n6,_n7,_n8),_n6,_n7)
l20((_n6+1),_n7,_n8) = (_N5(_n6,_n7,_n8)+0)
d4array20(A,_x2,_x3,_x4,_x5,0,_n7,_n8) = d4array24(A,_x2,_x3,_x4,_x5,_n7,_n8)
l20(0,_n7,_n8) = 0
(_N6(_n7,_n8)>=(-(0)+p))
(_n6<_N6(_n7,_n8)) -> ((_n6+0)<p)
d4array24(A,_x2,_x3,_x4,_x5,(_n7+1),_n8) = d4array20(A,_x2,_x3,_x4,_x5,_N6(_n7,_n8),_n7,_n8)
k24((_n7+1),_n8) = (_N6(_n7,_n8)+0)
l24((_n7+1),_n8) = l20(_N6(_n7,_n8),_n7,_n8)
d4array24(A,_x2,_x3,_x4,_x5,0,_n8) = d4array29(A,_x2,_x3,_x4,_x5,_n8)
k24(0,_n8) = 0
l24(0,_n8) = 0
(_N7(_n8)>=(-(0)+n))
(_n7<_N7(_n8)) -> ((_n7+0)<n)
d4array29(A,_x2,_x3,_x4,_x5,(_n8+1)) = d4array24(A,_x2,_x3,_x4,_x5,_N7(_n8),_n8)
k29((_n8+1)) = k24(_N7(_n8),_n8)
j29((_n8+1)) = (_N7(_n8)+0)
l29((_n8+1)) = l24(_N7(_n8),_n8)
d4array29(A,_x2,_x3,_x4,_x5,0) = d4array(A,_x2,_x3,_x4,_x5)
k29(0) = 0
j29(0) = 0
l29(0) = 0
(_N8>=(-(0)+m))
(_n8<_N8) -> ((_n8+0)<m)
Unknown
